Add missing translations

--- a/Common/src/main/resources/assets/puffish_attributes/lang/en_us.json
+++ b/Common/src/main/resources/assets/puffish_attributes/lang/en_us.json
@@ -7,6 +7,9 @@
 	"attribute.puffish_attributes.player.jump": "Jump",
 	"attribute.puffish_attributes.player.resistance": "Resistance",
 	"attribute.puffish_attributes.player.mining_speed": "Mining Speed",
+	"attribute.puffish_attributes.player.pickaxe_speed": "Pickaxe Speed",
+	"attribute.puffish_attributes.player.axe_speed": "Axe Speed",
+	"attribute.puffish_attributes.player.shovel_speed": "Shovel Speed",
 	"attribute.puffish_attributes.player.sprinting_speed": "Sprinting Speed",
 	"attribute.puffish_attributes.player.knockback": "Knockback"
 }
