--- a/Common/src/main/resources/assets/puffish_attributes/lang/en_us.json
+++ b/Common/src/main/resources/assets/puffish_attributes/lang/en_us.json
@@ -1,16 +1,24 @@
 {
 	"attribute.puffish_attributes.player.stamina": "Stamina",
+	"attribute.puffish_attributes.player.magic_damage": "Magic Damage",
 	"attribute.puffish_attributes.player.melee_damage": "Melee Damage",
 	"attribute.puffish_attributes.player.ranged_damage": "Ranged Damage",
 	"attribute.puffish_attributes.player.fortune": "Fortune",
 	"attribute.puffish_attributes.player.healing": "Healing",
 	"attribute.puffish_attributes.player.jump": "Jump",
 	"attribute.puffish_attributes.player.resistance": "Resistance",
+	"attribute.puffish_attributes.player.magic_resistance": "Magic Resistance",
+	"attribute.puffish_attributes.player.melee_resistance": "Melee Resistance",
+	"attribute.puffish_attributes.player.ranged_resistance": "Ranged Resistance",
 	"attribute.puffish_attributes.player.mining_speed": "Mining Speed",
 	"attribute.puffish_attributes.player.pickaxe_speed": "Pickaxe Speed",
 	"attribute.puffish_attributes.player.axe_speed": "Axe Speed",
 	"attribute.puffish_attributes.player.shovel_speed": "Shovel Speed",
 	"attribute.puffish_attributes.player.sprinting_speed": "Sprinting Speed",
 	"attribute.puffish_attributes.player.knockback": "Knockback",
-	"attribute.puffish_attributes.player.repair_cost": "Repair Cost"
+	"attribute.puffish_attributes.player.repair_cost": "Repair Cost",
+	"attribute.puffish_attributes.player.armor_shred": "Armor Shred",
+	"attribute.puffish_attributes.player.toughness_shred": "Toughness Shred",
+	"attribute.puffish_attributes.player.protection_shred": "Protection Shred",
+	"attribute.puffish_attributes.player.natural_regeneration": "Natural Regeneration"
 }
