--- a/Common/src/main/resources/assets/puffish_attributes/lang/pl_pl.json
+++ b/Common/src/main/resources/assets/puffish_attributes/lang/pl_pl.json
@@ -1,16 +1,24 @@
 {
 	"attribute.puffish_attributes.player.stamina": "Wytrwałość",
+	"attribute.puffish_attributes.player.magic_damage": "Obrażenia magiczne",
 	"attribute.puffish_attributes.player.melee_damage": "Obrażenia w zwarciu",
 	"attribute.puffish_attributes.player.ranged_damage": "Obrażenia dystansowe",
 	"attribute.puffish_attributes.player.fortune": "Fortuna",
 	"attribute.puffish_attributes.player.healing": "Leczenie",
 	"attribute.puffish_attributes.player.jump": "Skok",
 	"attribute.puffish_attributes.player.resistance": "Odporność",
+	"attribute.puffish_attributes.player.magic_resistance": "Odporność magiczna",
+	"attribute.puffish_attributes.player.melee_resistance": "Odporność w zwarciu",
+	"attribute.puffish_attributes.player.ranged_resistance": "Odporność dystansowa",
 	"attribute.puffish_attributes.player.mining_speed": "Prędkość kopania",
 	"attribute.puffish_attributes.player.pickaxe_speed": "Prędkość kilofa",
 	"attribute.puffish_attributes.player.axe_speed": "Prędkość siekiery",
 	"attribute.puffish_attributes.player.shovel_speed": "Prędkość łopaty",
 	"attribute.puffish_attributes.player.sprinting_speed": "Prędkość biegania",
 	"attribute.puffish_attributes.player.knockback": "Odrzut",
-	"attribute.puffish_attributes.player.repair_cost": "Koszt naprawy"
+	"attribute.puffish_attributes.player.repair_cost": "Koszt naprawy",
+	"attribute.puffish_attributes.player.armor_shred": "Osłabianie zbroi",
+	"attribute.puffish_attributes.player.toughness_shred": "Osłabianie wytrzymałości",
+	"attribute.puffish_attributes.player.protection_shred": "Osłabianie ochrony",
+	"attribute.puffish_attributes.player.natural_regeneration": "Naturalna regeneracja"
 }
